[gd_scene load_steps=4 format=3 uid="uid://beafduixkdcu0"]

[ext_resource type="Texture2D" uid="uid://ipjnvj1ouods" path="res://assets/towers/towerplacespot.png" id="1_w0e11"]
[ext_resource type="Script" path="res://scenes/towers/tower_spot.gd" id="1_wlugs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmcd1"]
size = Vector2(22, 22)

[node name="TowerSpot" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_wlugs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_w0e11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rmcd1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
